Fix double border on stacked toggle buttons via global styles
Material's internal .mat-button-toggle border can't be overridden
from component-scoped styles. Moved the fix to global styles.scss
to target .mat-button-toggle + .mat-button-toggle border-left
which causes the double line when buttons stack vertically.

--- a/v60-app/src/app/app.scss
+++ b/v60-app/src/app/app.scss
@@ -319,10 +319,6 @@ $accent-yellow: #ffd166;
     mat-button-toggle {
       flex: none;
       width: 100%;
-
-      + mat-button-toggle {
-        border-top: none;
-      }
     }
   }
 
